# N4M_STRAININFO_2025

./: .env  .gitignore  Makefile  README.md  presentation.ipynb  pyproject.toml
src/n4m_straininfo_2025/: main.py
src/n4m_straininfo_2025/lib/: helper.py
src/n4m_straininfo_2025/tips/: abstract_1.py  ccno_2.py  si_ids_4.py  taxa_3.py  verify_taxa_5.py
